--- a/main.tex
+++ b/main.tex
@@ -104,7 +104,7 @@ The first section explains, by the Holographic Principle, \textit{why large numb
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
 \caption{The Topological Axis. Double logarithm (y = lnln(Y)) of main dimensionless physical quantities 
 Y corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
-periodicity 8 [25] which is at the origin of the name `topological axis`. 
+periodicity 8 \cite{Polchinski} which is at the origin of the name `topological axis`. 
 \textit{With unit the Electron Compton wavelength, in the macro-physics side}, the Universe circumference 
     is tied to bosonic critical dimension 26, while Cartan-Bott reduction leads to n = 18 (thermal photon, 
     tied to the the mammal wavelength throught the Sternheimer scale factor j), n = 10, (superstring 
@@ -227,7 +227,7 @@ of galaxy groups, with time constant $R/c$ being compensated by the appearance o
 neutrons at rate $c^{3} /Gm_{n}$, corresponding to about one neutron by century in a cathedral volume. The invariant visible Universe radius $R$ is then defined by the
 Schwarszchild relation, so that each point is the center of an equivalent $R$-radius black hole, of
 critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
-Principle, untill now devoted to 3D application only [6]:
+Principle, untill now devoted to 3D application only \cite{Bousso}:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
@@ -251,8 +251,8 @@ monochrome instead of the monoradial relation above:
 S_{BH}\, = \pi(R/l_P )^{2} = 2\pi R^{(0)}_{GC} /l_{P}
 \end{equation}
 with $R^{(0)}_{GC} /R = l_{P} /\lambdabar_{M} \sim 10^{61}$. The conservation of the time constant $t = R/c = R^{(0)}_{GC} /C$ introduces a canonical velocity $C \sim 10^{61} c$, lifting the veil on an energy larger than that of the visible Universe by a factor of $10^{122}$, which can be identified with the $l_{P}$ - normalised quantum energy of vacuum, checked by
-the Casimir effect [7]. The central problem of quantum cosmic physics is thus solved. Moreover, the
-objections against the Hawking approach using trans-Plankian frequencies are wiped out [8].
+the Casimir effect \cite{Duplantier}. The central problem of quantum cosmic physics is thus solved. Moreover, the
+objections against the Hawking approach using trans-Plankian frequencies are wiped out \cite{Damour}.
 
 In a better approximation, justified below, $R$ is replaced in the above relation by $R^{\prime} = 2\hbar^{2}/Gm_{N}^{3}
 \approx 18.105$ Gly, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle
@@ -367,15 +367,15 @@ $
 G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \cdot 10^{-62} Joule \cdot m^{3}
 $
-[10]. This introduces the product of two area speeds, confirming the
+. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
 \begin{equation}
 (\lambdabar_{e}^2/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F})^{1/2}
 \end{equation}
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
 gravitation and weak nuclear force. This specifies the $G$ value to $10^{-6}$ precision (ppm). It is
-compatible with the well-elaborate $(10^{-5})$ BIPM measurement [11], at several sigmas from the Codata
-value [10], but the later is the mean between discordant measurements.
+compatible with the well-elaborate $(10^{-5})$ BIPM measurement \cite{Quinn}, at several sigmas from the Codata
+value \cite{Tanabashi}, but the later is the mean between discordant measurements.
 Computer analysis shows that this value of $G$ is compatible with the following well-defined value, with $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
 $$\begin{array}{ll}
 (2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3} \\
@@ -388,9 +388,9 @@ This value will be confirmed, in the ppb range, in Section 4.
 
 With $t = R/c$, the relation $(t t_{K}^2)^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
 was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
-climate variation, was also of flickering cosmic origin [12]. This hypothesis has been recently
+climate variation, was also of flickering cosmic origin \cite{Sanchez3}. This hypothesis has been recently
 confirmed by the straight temporal profile of the phenomena, showing it is tied to a quantum
-process [13].
+process \cite{Kotov2}.
 
 Remarkable enough, a `mysterious` period $\approx 1/9$ days of the Sun's pulsations has been predicted
 long before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin
@@ -399,7 +399,7 @@ the Sevin's «vibration period» of the Sun was merely an issue of his reflectio
 and distances inside the solar system. Nevertheless, solar pulsations with exactly that period were
 discovered, after decades, - and independently of the Sevin's paper, - by a few groups of
 astrophysicists. Soon the presence of the same period, or timescale, was found in other objects of
-Cosmos too [9].
+Cosmos too \cite{Kotov1}.
 
 Opponents emphasize often that $t_{K}$ is very close to the 9th harmonic of the mean terrestrial day: the corresponding ratio - of the length of a day to the $t_{K}$ period - is equal to 8.99943(1), - and claim
 thus the $t_{K}$ oscillation of the Sun should be regarded as an artifact (see, e.g., Grec and Fossat, 1979;
@@ -483,15 +483,15 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 
 \subsubsection{The Tifft, Arp and the Pioneer effects}
 
-Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now, this
+Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this
 speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{Sanchez1}.
 
-The Halton Arp observations of chains of galaxies with different redshifts [15] was also
+The Halton Arp observations of chains of galaxies with different redshifts \cite{Arp} was also
 rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible
 Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass
 density $\rho_{c}$.
 
-Much controversial is the Pioneer deceleration [16] $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$ It corresponds to
+Much controversial is the Pioneer deceleration \cite{Nieto} $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$ It corresponds to
 the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s $$ close to $$t = R/c \approx 4.3587 \times 10^{17} s $$ The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
 
 \subsection{The Logic of Prospective Dimensional Analysis}
@@ -518,7 +518,7 @@ Moreover, to $10^{-7}$, corresponding to $7 \times 10^{-6}$ precision on the abo
 ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx exp(4e – 1/a)
 \end{equation}
  
-This is a dramatic geometrical confirmation (Fig. 6) for the visible Universe – Grandcosmos holographic couple, confirming the B.I.P.M. measurement of $G$ [11].
+This is a dramatic geometrical confirmation (Fig. 6) for the visible Universe – Grandcosmos holographic couple, confirming the B.I.P.M. measurement of $G$ \cite{Quinn}.
 
 
 \begin{figure}[h]
@@ -550,7 +550,7 @@ In his three first minutes of cosmology, the first author obtained the length:
 \begin{equation}
 l \{\hbar,G,m\} = \hbar^{2} /Gm^{3} \approx R/2
 \end{equation}
-but it took 9 years to nurture this publication [12], and it appeared later \cite{Sanchez1} that $m$ must be considered more precisely as the cubic root of the product 
+but it took 9 years to nurture this publication \cite{Sanchez3}, and it appeared later \cite{Sanchez1} that $m$ must be considered more precisely as the cubic root of the product 
 $
 m_{e} \cdot m_{p} \cdot m_{H}$
 
@@ -595,7 +595,7 @@ T/t_0 \approx (3/e\sqrt{2})O_M^3
 \end{equation}
 The simplest interpretation follows: this is the number of quantum events in a Super-cycle of period $T$, in a perfectly deteministic Cosmos. 
 
-The  Monster  Group,  the largest of 26 sporadic groups, is suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge between apparently no-connected mathematical theories [17]. see below the dramatic properties of $O_M^3$.
+The  Monster  Group,  the largest of 26 sporadic groups, is suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge between apparently no-connected mathematical theories \cite{Borcherds}. see below the dramatic properties of $O_M^3$.
 
 Introducing the above Pioneer abnormal deceleration $g_{Pn}$, one gets the time: 
 $
@@ -653,7 +653,7 @@ Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 p
 
 In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
 simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are co-
-prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study [18].
+prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
 
 This is the degenerate arithmetic form of the spatio-temporal holographic principle.
 
@@ -681,9 +681,9 @@ relation with the CMB Wien wavelength $l_{CMB}$, to $0.01\%$:
 \end{equation}
 Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
 thermal character. But \textit{in a totally deterministic cosmos, there is no paradox}. This question is
-connected with the black hole information paradigm [20]. Independently of our approach, an
+connected with the black hole information paradigm \cite{Preskill}. Independently of our approach, an
 argument in favor of a total conservation of information was tied to a non-evolution cosmology
-[21], Moreover, we have shown that the formalisms of Holography and Unitary Matrix Quantum
+\cite{Nikolic}, Moreover, we have shown that the formalisms of Holography and Unitary Matrix Quantum
 Physics are very similar \cite{Sanchez1}. 
 
 Note that $e^{a}$ is also compatible with the half volume of the proton, with
@@ -695,7 +695,7 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 
 
 \subsection{Atiyah and Sternheimer constants}
-    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
+    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term \cite{Atiyah1}. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
 \begin{equation}
 a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
@@ -780,7 +780,7 @@ O_B \approx (a/\Gamma)^{a/3}
 \end{equation}
 where $a/\Gamma = \pi/\gamma $ is the canonical Atiyah ratio.
 
-Note that $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) [10], where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
+Note that $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) \cite{Tanabashi}, where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
 $$O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx  n_{ph}/\delta^{1/2} $$
 where $$n_{ph}\approx (3/\pi) exp(e^6/2)$$ (to 0.2 \%) is the photon number in the visible universe. Therefore 496, $p$ and $g_0$ are also privileged computations bases. 
 
@@ -854,7 +854,7 @@ manifestation of the general neglectance of the Hierarchy Principle.
 
 A confirmation of a symmetry between $a$ and 137 is the two following approximations for $p$ with the same imprecision 80 ppb, so leading to the ppb relation:
  $$p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $$ 
-where $D = 196883$ is the Moonshine Monster dimension [23], which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. 
+where $D = 196883$ is the Moonshine Monster dimension \cite{Conway}, which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. 
 
 Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to (0.012 \%) $$6\times 5^5 \approx (aH/n)^2 $$  
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
@@ -924,7 +924,7 @@ This yields to a muon relative to electron mass ratio
 \begin{equation}
 \mu \approx 206.7682869
 \end{equation} within its 20 ppb measurement range.
-Now one observes the Koide relation [22], where $\mu$ and $\tau$ are the muon and tau masses relative to electron mass:
+Now one observes the Koide relation \cite{Atiyah1}, where $\mu$ and $\tau$ are the muon and tau masses relative to electron mass:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K \approx 4\pi (apH)^{1/4}
 \end{equation}
@@ -940,7 +940,7 @@ F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \appro
 \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5} 
 \end{array}
 $$
-(0.7 ppm, 0.3 \%, 0.1 \%, 0.4  \% and 30 ppb). This shows that Cosmos uses the rationalisation 137/50 for $e$, and that the product $Pi_{par}$ of the 6 pariah group orders plays a role. The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension [23] $D = 196883$, to 48, 10, 13, 26 ppm:
+(0.7 ppm, 0.3 \%, 0.1 \%, 0.4  \% and 30 ppb). This shows that Cosmos uses the rationalisation 137/50 for $e$, and that the product $Pi_{par}$ of the 6 pariah group orders plays a role. The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension \cite{Conway} $D = 196883$, to 48, 10, 13, 26 ppm:
 $$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$ 
 Moreover $\tau$ correlates with the
 term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
@@ -999,7 +999,7 @@ ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma
 Now, as was recalled previously in the Holic Principle, the exponents represent the number of
 dimensions. So, this correlates to a dimensional reduction, eliminating 137, from 9D and 6D to
 3D, which could be associated with the superstring theory, where the equations are coherent only if space
-has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances [25].
+has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances \cite{Polchinski}.
 Bearing in mind that:
 \begin{equation}
 m_{e} c^{2} f(\gamma\Gamma) \approx 125.175 GeV
@@ -1024,7 +1024,7 @@ This article confirms direct connexions \cite{Sanchez1} between physical and bio
 while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
 `Inverse Anthropic Principle` \cite{Sanchez1} is more logical, stating that an all-deterministic single Cosmos
 implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
-called `theory` with too much missing links [26]. The fundamental hypothesis of
+called `theory` with too much missing links \cite{Chauvin}. The fundamental hypothesis of
 this article is that the Cosmos is like a computer. A common point with the brain is the multi-base
 character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi
 question ` where are they ? ` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
@@ -1038,7 +1038,7 @@ sporadic groups is a crucial discovery for physics. In particular, it is clearly
 Grandcosmos is like a computer which uses optimal physics-mathematics dimensionless constants as
 calculation basis and that they are present in DNA characteristics \cite{Sanchez1}. The present article shows
 definitely the liaisons with $e$, $\pi$ and $\gamma$, as well as very special rational approximations of 
-them, and rehabilitates string theories, also abandoned by amajority [27].
+them, and rehabilitates string theories, also abandoned by amajority \cite{Woit}.
 
 There is also the Determinism separation, a majority believing seriously that `God plays dices`,
 in contradiction with our Cosmic Computing Principle. The $c$-free analysis gives simply and
@@ -1047,7 +1047,7 @@ calculation the visible Universe horizon radius, in a formula which was present 
 astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
 This is tied to the application of the exclusion principle that Eddington dared to apply in
 cosmology. For this reason he was declared as a `crakpot` and his theory discarded by a majority.
-Fortunately, the large theoretical advance of Eddington is now recognized [28][29], but without
+Fortunately, the large theoretical advance of Eddington is now recognized \cite{Larin,Durham}, but without
 mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Carr}.
 
 The same rejection seems to apply now to Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
@@ -1092,7 +1092,7 @@ The high precision of relations prove that the traditional scientific thinking i
 the physical parameter values, meaning they are mere mathematical constants. In this respect, the
 high precision in the measurement of the Electric and Fermi constants, Proton, Neutron and Muon masses, Kotov cosmic period, and, with far lesser precision, background temperature, must be saluted as decisive achievements.
 
-In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote [24]: `Nobody has
+In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote \cite{Koide}: `Nobody has
 ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
 should be worried what the Universe would be if $a$ were not 137.035999...` This is a definite
 rejection of the Multiverse Hypothesis.
@@ -1113,7 +1113,7 @@ Topological Axis, whose apparent asymmetry suggests directly the existence of a 
 
 While it is claimed that String Theory do not connect with experiment, the Cartan-Bott periodicity
 appears, unifying in particular the gauge bosons, so confirming the Standard Model of Particle Physics, but with
-massive gluon, which is independently seriously considered [31].
+massive gluon, which is independently seriously considered \cite{Salingaros}.
 
 This means also that the International System must go back to only three fundamental unities,
 Mass, Length and Time. The distinction between Length and Time must be emphasized, as
@@ -1134,10 +1134,10 @@ The simplest proof of the computation basis character of the electrical paramete
 by the multiple appearance of the terms $e^{a}$ and $a^{a}$.
 
 The great significance of a number of dimensions is the number of independent variables,
-which is a fundamental invariant, whatever the theory [32]. So, it is logical to advance a
+which is a fundamental invariant, whatever the theory \cite{Weigel}. So, it is logical to advance a
 hypothesis that 26 physical parameters are defined by the 26 sporadic cardinal orders. Since
-Sporadic Groups are associated with octonion algebra [33], this rejoins a prediction of Atiyah's last
-work, the essential role of octonion algebra in the final theory [24].
+Sporadic Groups are associated with octonion algebra \cite{Atiyah2}, this rejoins a prediction of Atiyah's last
+work, the essential role of octonion algebra in the final theory \cite{Koide}.
 
 The problem of the stability of the solar system must be revisited, taking into account
 seriously a cosmic influence, characterized by the Kotov's period and length. Also the Pioneer, Tifft
@@ -1170,7 +1170,7 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the \textit{already refuted} standard evolutionary model.
 \item 2/ The Particle Physics will integrate the Koide relation and introduce massive gluons and composite quark down.
 \item 3/ Informatics software should  be boosted by the principle of multi-base computation.
-\item 4/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. Recent studies [30] are on this way. 
+\item 4/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way. 
 \end{itemize}
 
 
@@ -1204,16 +1204,16 @@ arXiv: 1607.01790v2 (2016).
 two cosmologies: the steady-state flickering Universe''. J. Cosmology 17,
 7225-7237 (2011).
 
-\bibitem{6} Bousso R. ``The Holographic Principle'', Review of Modern Physics
+\bibitem{Bousso} Bousso R. ``The Holographic Principle'', Review of Modern Physics
 74, 834 (2002).
 
-\bibitem{7} Duplantier B. ``Introduction a l'effet Casimir''. Seminaire
+\bibitem{Duplantier} Duplantier B. ``Introduction a l'effet Casimir''. Seminaire
 Poincare 1, 41-54 (2002).
 
-\bibitem{8} Damour T. ``The Entropy of Black Hole: a Primer''. Seminaire
+\bibitem{Damour} Damour T. ``The Entropy of Black Hole: a Primer''. Seminaire
 Poincare 2, 89-115 (2003).
 
-\bibitem{9} Kotov V.A. and Lyuty V.M. ``The 160-min. periodicity in the optical
+\bibitem{Kotov1} Kotov V.A. and Lyuty V.M. ``The 160-min. periodicity in the optical
 and X-ray observations of extragalactic objects''. Compt. Rend. Acad. Sci.
 Paris 310, Ser. II, 743-748 (1990). Fossat E., Boumier P., Corbard T., et al.
 ``Asymptotic $g$ modes: Evidence for a rapid rotation of the solar core''.
@@ -1228,85 +1228,85 @@ syst\`eme solaire''. Compt. Rend. Acad. Sci. Paris. 222, 220-221 (1946).
 Kotov V.A. ``Motion of the fast exoplanets''. Astrophys. Space Sci. 363(3), 1-5
 (2018); DOI: 10.1007/s10509-018-3278-1.
 
-\bibitem{10} Tanabashi M., Hagiwara K., Hikasa K., et al. (Particle Data
+\bibitem{Tanabashi} Tanabashi M., Hagiwara K., Hikasa K., et al. (Particle Data
 Group). ``The review of particle physics''. Phys. Rev. D, 98, 030001 (2018);
 {\it http://pdg.lbl.gov.}
 
-\bibitem{11} Quinn T., Speake C., Parks H., Davis R., ``The BIPM measurements
+\bibitem{Quinn} Quinn T., Speake C., Parks H., Davis R., ``The BIPM measurements
 of the Newtonian constant of gravitation, G.'', Phil. Trans. R. Soc. A, 372,
 20140032 (2014); {\it http://dx.doi.org/10.1098/rsta.2014.0032}.
 
-\bibitem{12} Sanchez F.M. ``Towards the grand unified Holic Theory''. Current
+\bibitem{Sanchez3} Sanchez F.M. ``Towards the grand unified Holic Theory''. Current
 Issues in Cosmology. Ed. J.-C. Pecker and J. Narlikar. Cambridge Univ. Press,
 2006; p. 257-260.
 
-\bibitem{13} Kotov V.A. and Sanchez F.M. ``Solar 22 years cycle'', Astrophys.
+\bibitem{Kotov2} Kotov V.A. and Sanchez F.M. ``Solar 22 years cycle'', Astrophys.
 Space Sci. 362(6), 1-6 (2017); DOI: 10.1007/s10509-016-2985-8.
 
-\bibitem{14} Tifft W.G. ``Redshift periodicities. The galaxy-quasar
+\bibitem{Tifft} Tifft W.G. ``Redshift periodicities. The galaxy-quasar
 connection''. Astrophys. Space Sci. 285(2):429 (2006).
 
-\bibitem{15} Arp H. ``The origin of companion galaxies''. Astrophys. J. 496,
+\bibitem{Arp} Arp H. ``The origin of companion galaxies''. Astrophys. J. 496,
 661-669 (1998).
 
-\bibitem{16} Nieto M. and Anderson J. ``Using early data to illuminate the
+\bibitem{Nieto} Nieto M. and Anderson J. ``Using early data to illuminate the
 Pioneer anomaly''. Pi Class. Quant. Grav. 22, 5345-5354 (2005);
 arXiv:ge-qc/0507052.
 
-\bibitem{17} Borcherds and Richard. ``Monstruous Moonshine and Monstruous Lie
+\bibitem{Borcherds} Borcherds and Richard. ``Monstruous Moonshine and Monstruous Lie
 Superalgebras''. Invent. Math. 109, 405-444 (1992).
 
-\bibitem{18} Bars I. ``Gauge Duality, Conformal Symmetry, and Space-Time with
+\bibitem{Bars} Bars I. ``Gauge Duality, Conformal Symmetry, and Space-Time with
 Two Times''. Phys. Rev. D 58 (1998); hep-th/9803188, 
 
-\bibitem{19} Cartan H. ``Demonstration homologique des theoremes de periodicite
+\bibitem{Cartan} Cartan H. ``Demonstration homologique des theoremes de periodicite
 de Bott''. I. Seminaire Henri Cartan, Tome 12 (1959-1960) no. 2, Expose no. 16,
 p. 1-16.  
 
-\bibitem{20} Preskill J. ``Do black holes destroy information?'' Internat.
+\bibitem{Preskill} Preskill J. ``Do black holes destroy information?'' Internat.
 Symp. on Black Holes, Membranes, Wormholes, and Superstrings (1992);
 arXiv:hep-th/9209058.
 
-\bibitem{21} Nikolic, Hrvoje. ``Resolving the black-hole information paradox by
+\bibitem{Nikolic} Nikolic, Hrvoje. ``Resolving the black-hole information paradox by
 treating time on an equal footing with space''. Phys. Lett. B. 678(2):
 218-221 (2009); arXiv:0905.0538.
 
-\bibitem{22} Atiyah M. ``The fine-structure constant''. 4th Heidelberg Laureate
+\bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. 4th Heidelberg Laureate
 Forum conference (2018); blog.sciencenet.cn/home.php?mod=attachment\&id=256716.
 
-\bibitem{23} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
+\bibitem{Conway} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
 Math. Soc. 11(3) 308-339 (1979)
 
-\bibitem{24} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
+\bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 
-\bibitem{25} Polchinski J. ``String Theory'', vol. 1, p. 22 (Cambridge
+\bibitem{Polchinski} Polchinski J. ``String Theory'', vol. 1, p. 22 (Cambridge
 University Press, 1998).
 
-\bibitem{26} Chauvin R. ``Le Darwinisme ou la fin d'un mythe'', ed. du Rocher
+\bibitem{Chauvin} Chauvin R. ``Le Darwinisme ou la fin d'un mythe'', ed. du Rocher
 (1997).
 
-\bibitem{27} Woit P. ``Not Even Wrong: The Failure of String Theory and the
+\bibitem{Woit} Woit P. ``Not Even Wrong: The Failure of String Theory and the
 Search for Unity in Physical Law'' (Basic Books, 2006).
 
-\bibitem{28} Larin S.A. ``Quantum chromodynamics with massive gluons''.
+\bibitem{Larin} Larin S.A. ``Quantum chromodynamics with massive gluons''.
 ArXiv:1304.8107 (2013).
 
-\bibitem{29} Durham I.T. ``Sir Arthur Eddington and the Foundations of Modern
+\bibitem{Durham} Durham I.T. ``Sir Arthur Eddington and the Foundations of Modern
 Physics'' (2006), p. 111; arXiv:quant-ph/0603146v1.
 
-\bibitem{30} Widom A. et al. ``Electromagnetic signals from bacteria DNA''
+\bibitem{Widom} Widom A. et al. ``Electromagnetic signals from bacteria DNA''
 (2012); arXiv: 1104.311v2.
 
-\bibitem{31} Salingaros N. ``Some remarks on the algebra of Eddington's E
+\bibitem{Salingaros} Salingaros N. ``Some remarks on the algebra of Eddington's E
 Numbers''. Foundations of Physics 15 (6), 683-691 (1985).
 
-\bibitem{32} Weigel D., Veysseyre R. and Carel C. ``Sur les symboles du groupe
+\bibitem{Weigel} Weigel D., Veysseyre R. and Carel C. ``Sur les symboles du groupe
 d'espace d'une wustite de tri-incommensurabilite cubique est sur les groupes de
 Bravais de sa famlille cristalline dans l'espace euclidien a six dimensions''.
 Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349-352 (1987).
 
-\bibitem{33} Atiyah M. Private communication (December 2018).
+\bibitem{Atiyah2} Atiyah M. Private communication (December 2018).
 
 %\bibitem{34} Grosmann, M and Rebordão, José and Meyrueis, Patrick. Propagation Of Waves In Optical Systems: Reformulation Of Huyghens Principle For Aspheric Systems. Proceedings of SPIE - The International Society for Optical Engineering. DOI 10.1117/12.968010. 02.1985
 
