--- a/main.tex
+++ b/main.tex
@@ -1188,43 +1188,43 @@ Submitted on April 1st, 2019 / Accepted on April 6th, 2019
 \begin{thebibliography}{99}\footnotesize
 
 \bibitem{Carr} Carr B.J. and Rees M.J., ``The anthropic principle and the
-structure of the physical world'', Nature 278, 605-612 (1979).
+structure of the physical world'', Nature 278, 605--612 (1979).
 
 \bibitem{Eddy} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
 
 \bibitem{Sanchez1} Sanchez F.M. ``Coherent Cosmology''. Vixra.org,1601.0011. Springer
 International Publishing AG. A. Tadjer et al. (eds.), Quantum Systems in
 Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics
-30 (2017), p. 375-407; DOI 10.1007/978-3-319-50255-7-23.
+30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.
 
 \bibitem{Bonvin} Bonvin V. ``Holicow, New cosmograil time delays of HE 0435-1223'',
 arXiv: 1607.01790v2 (2016).
 
 \bibitem{Sanchez2} Sanchez F.M., Kotov V.A. and Bizouard C. ``Towards a synthesis of
 two cosmologies: the steady-state flickering Universe''. J. Cosmology 17,
-7225-7237 (2011).
+7225--7237 (2011).
 
 \bibitem{Bousso} Bousso R. ``The Holographic Principle'', Review of Modern Physics
 74, 834 (2002).
 
 \bibitem{Duplantier} Duplantier B. ``Introduction a l'effet Casimir''. Seminaire
-Poincare 1, 41-54 (2002).
+Poincare 1, 41--54 (2002).
 
 \bibitem{Damour} Damour T. ``The Entropy of Black Hole: a Primer''. Seminaire
-Poincare 2, 89-115 (2003).
+Poincare 2, 89--115 (2003).
 
 \bibitem{Kotov1} Kotov V.A. and Lyuty V.M. ``The 160-min. periodicity in the optical
 and X-ray observations of extragalactic objects''. Compt. Rend. Acad. Sci.
-Paris 310, Ser. II, 743-748 (1990). Fossat E., Boumier P., Corbard T., et al.
+Paris 310, Ser. II, 743--748 (1990). Fossat E., Boumier P., Corbard T., et al.
 ``Asymptotic $g$ modes: Evidence for a rapid rotation of the solar core''.
 Astron. Astrophys. 604, A40, 1-17 (2017); DOI: 10.1051/0004-6361/201730460.
 Grec G., Fossat E. ``Calculation of pseudo solar narrow band oscillations
 produced by atmospheric differential extinction''. Astron. Astrophys. 77,
-351-353 (1979). Kotov V.A. ``Evolution of the Sun and the Earth: the (un)known
-period 1.035 years''. Izv. Krym. Astrofiz. Obs. 109(1), 232-253 (2013).
-Kotov V.A. ``Fast spinning of planets''. Earth Moon Planets 122(1), 43-52
+351--353 (1979). Kotov V.A. ``Evolution of the Sun and the Earth: the (un)known
+period 1.035 years''. Izv. Krym. Astrofiz. Obs. 109(1), 232--253 (2013).
+Kotov V.A. ``Fast spinning of planets''. Earth Moon Planets 122(1), 43--52
 (2018) (2018); DOI:10.1007/s11038-018-9520-6. Sevin, \'E. ``Sur la structure du
-syst\`eme solaire''. Compt. Rend. Acad. Sci. Paris. 222, 220-221 (1946).
+syst\`eme solaire''. Compt. Rend. Acad. Sci. Paris. 222, 220--221 (1946).
 Kotov V.A. ``Motion of the fast exoplanets''. Astrophys. Space Sci. 363(3), 1-5
 (2018); DOI: 10.1007/s10509-018-3278-1.
 
@@ -1238,7 +1238,7 @@ of the Newtonian constant of gravitation, G.'', Phil. Trans. R. Soc. A, 372,
 
 \bibitem{Sanchez3} Sanchez F.M. ``Towards the grand unified Holic Theory''. Current
 Issues in Cosmology. Ed. J.-C. Pecker and J. Narlikar. Cambridge Univ. Press,
-2006; p. 257-260.
+2006; p. 257--260.
 
 \bibitem{Kotov2} Kotov V.A. and Sanchez F.M. ``Solar 22 years cycle'', Astrophys.
 Space Sci. 362(6), 1-6 (2017); DOI: 10.1007/s10509-016-2985-8.
@@ -1247,21 +1247,21 @@ Space Sci. 362(6), 1-6 (2017); DOI: 10.1007/s10509-016-2985-8.
 connection''. Astrophys. Space Sci. 285(2):429 (2006).
 
 \bibitem{Arp} Arp H. ``The origin of companion galaxies''. Astrophys. J. 496,
-661-669 (1998).
+661--669 (1998).
 
 \bibitem{Nieto} Nieto M. and Anderson J. ``Using early data to illuminate the
 Pioneer anomaly''. Pi Class. Quant. Grav. 22, 5345-5354 (2005);
 arXiv:ge-qc/0507052.
 
 \bibitem{Borcherds} Borcherds and Richard. ``Monstruous Moonshine and Monstruous Lie
-Superalgebras''. Invent. Math. 109, 405-444 (1992).
+Superalgebras''. Invent. Math. 109, 405--444 (1992).
 
 \bibitem{Bars} Bars I. ``Gauge Duality, Conformal Symmetry, and Space-Time with
 Two Times''. Phys. Rev. D 58 (1998); hep-th/9803188, 
 
 \bibitem{Cartan} Cartan H. ``Demonstration homologique des theoremes de periodicite
 de Bott''. I. Seminaire Henri Cartan, Tome 12 (1959-1960) no. 2, Expose no. 16,
-p. 1-16.  
+p. 1--16.  
 
 \bibitem{Preskill} Preskill J. ``Do black holes destroy information?'' Internat.
 Symp. on Black Holes, Membranes, Wormholes, and Superstrings (1992);
@@ -1269,13 +1269,13 @@ arXiv:hep-th/9209058.
 
 \bibitem{Nikolic} Nikolic, Hrvoje. ``Resolving the black-hole information paradox by
 treating time on an equal footing with space''. Phys. Lett. B. 678(2):
-218-221 (2009); arXiv:0905.0538.
+218--221 (2009); arXiv:0905.0538.
 
 \bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. 4th Heidelberg Laureate
-Forum conference (2018); blog.sciencenet.cn/home.php?mod=attachment\&id=256716.
+Forum conference (2018); www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/.
 
 \bibitem{Conway} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
-Math. Soc. 11(3) 308-339 (1979)
+Math. Soc. 11(3) 308--339 (1979)
 
 \bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
@@ -1299,12 +1299,12 @@ Physics'' (2006), p. 111; arXiv:quant-ph/0603146v1.
 (2012); arXiv: 1104.311v2.
 
 \bibitem{Salingaros} Salingaros N. ``Some remarks on the algebra of Eddington's E
-Numbers''. Foundations of Physics 15 (6), 683-691 (1985).
+Numbers''. Foundations of Physics 15 (6), 683--691 (1985).
 
 \bibitem{Weigel} Weigel D., Veysseyre R. and Carel C. ``Sur les symboles du groupe
 d'espace d'une wustite de tri-incommensurabilite cubique est sur les groupes de
 Bravais de sa famlille cristalline dans l'espace euclidien a six dimensions''.
-Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349-352 (1987).
+Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349--352 (1987).
 
 \bibitem{Atiyah2} Atiyah M. Private communication (December 2018).
 
